# sgbd

./: .env.dev  .envrc  .gitignore  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 22019dba9deb_initial_schema_with_users_books_loans.py  596dec86f3bb_remove_isbn_from_book_model.py  5f435fe3da4e_add_version_column_for_optimistic_.py  6edd809911de_add_book_copies_table_and_update_loans.py  83962b1e9b4f_add_title_and_active_loan_index.py  8b98c7bb891c_add_unique_constraint_on_book_title_and_.py  9b8e96920aae_add_constraint_loan_return_later_than_.py  cc018f9ae89c_remove_unique_constraint_on_book_title_.py  e085756f0442_use_integer_for_fine_cents_datetime_for_.py
app/: lifespan.py  logging.py  main.py  tracing.py
app/api/: exception_handlers.py  health.py
app/api/dependencies/: __init__.py  book.py  cache.py  db.py  loan.py  user.py
app/api/middleware/: logging.py
app/api/v1/: books.py  loans.py  router.py  users.py
app/cache/: __init__.py  book.py  client.py  config.py
app/db/: config.py  session.py
app/db/models/: __init__.py  book.py  book_copy.py  loan.py  user.py
app/exceptions/: domain.py
app/repositories/: __init__.py  book.py  book_copy.py  loan.py  user.py
app/schemas/: __init__.py  book.py  book_copy.py  loan.py  user.py  wire.py
app/services/: __init__.py  book.py  loan.py  user.py
scripts/: healthcheck.py  start.sh
tests/: books.hurl  loans.hurl  users.hurl
tests/integration/: conftest.py  test_books_api.py  test_loans_api.py  test_users_api.py
tests/unit/: test_book_service.py  test_loan_service.py  test_user_service.py
