[project]
name = "sgbd"
version = "0.1.0"
description = "Um sistema de gerenciamento de biblioteca digital"
authors = [{ name = "Pedro Fedricci", email = "pedromfedricci@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi (>=0.127.1,<0.128.0)",
  "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
  "alembic (>=1.17.2,<2.0.0)",
  "psycopg2-binary (>=2.9.11,<3.0.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
  "uvicorn (>=0.40.0,<0.41.0)",
  "pydantic[email] (>=2.12.5,<3.0.0)",
]
