[project]
name = "sgbd"
version = "0.1.0"
description = "Um sistema de gerenciamento de biblioteca digital"
authors = [{ name = "Pedro Fedricci", email = "pedromfedricci@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi (>=0.127.1,<0.128.0)",
  "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
  "alembic (>=1.17.2,<2.0.0)",
  "psycopg2-binary (>=2.9.11,<3.0.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
  "uvicorn (>=0.40.0,<0.41.0)",
  "pydantic[email] (>=2.12.5,<3.0.0)",
  "structlog>=25.5.0",
  "opentelemetry-api>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-instrumentation-fastapi>=0.60b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
  "opentelemetry-exporter-otlp>=1.39.1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "testcontainers[postgres]>=4.0",
]

[dependency-groups]
lint = ["ruff>=0.8"]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning:testcontainers.*"]

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "B",     # flake8-bugbear
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # function call in default argument (false positive for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
